(chore) Add Simple Form to DRY up form views

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,6 +33,7 @@ Metrics/LineLength:
     Max: 80
     Exclude:
       - 'spec/**/*'
+      - 'config/initializers/simple_form.rb'
 
 Metrics/BlockLength:
     Exclude:
