(chore) Add guidance around changing a lightbulb
Replace the 'Have you changed your lightbulb?' question, with a page
featuring an embedded YouTube video.

Clicking 'continue' takes the user to the 'describe repair' page.

--- a/db/questions.yml
+++ b/db/questions.yml
@@ -299,18 +299,10 @@ light_check_trip_switches:
   question: Have you checked the trip switches?
   answers:
     - text: 'Yes'
-      next: is_lightbulb_changed
+      page: replace_lightbulb
 
     - text: 'No'
       page: check_fusebox
-
-is_lightbulb_changed:
-  question: Have you tried changing the lightbulb, and the light is still not working?
-  answers:
-    - text: 'Yes, I have and the light is still not working'
-
-    - text: 'No'
-      page: repair_your_responsibility
 
 toilet_problem:
   question: Is your toilet...?
