(feature) fail if there is no 'location' question
We use this as the first question, so it has to exist. Some of the
existing tests used a questions file which didn't have this question.

--- a/spec/fixtures/basic_question.yml
+++ b/spec/fixtures/basic_question.yml
@@ -1,4 +1,9 @@
 ---
+location:
+  question: Where is the problem located?
+  answers:
+    - text: Inside
+    - text: Outside
 example:
   question: Is this an example?
   answers:
