(feature) Room is stored and shown on confirmation
Since we're depending on this field being there, we need to make it
mandatory and update fixtures accordingly.

--- a/spec/fixtures/basic_question.yml
+++ b/spec/fixtures/basic_question.yml
@@ -4,6 +4,12 @@ location:
   answers:
     - text: Inside
     - text: Outside
+which_room:
+  question: Which room?
+  answers:
+    - text: Kitchen
+    - text: Bathroom
+    - text: Other
 example:
   question: Is this an example?
   answers:
