(feature) Service can be disabled by setting a feature flag
When UH is down, users will be unable to raise a repair. In this case,
display an apology message which directs them to the Repairs Contact
Centre rather than showing an error halfway through the form.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
       - 'db/migrate/**/*'
       - 'db/schema.rb'
       - 'bin/**/*'
+      - 'config/routes.rb'
 
 Rails:
     Enabled: true
