(chore) Restore 'check light bulb' question
Previously, if you answered "Have you checked the fusebox?" with "Yes"
you'd end up on the "How to replace a light bulb" page.

Now, you're asked an additional "Have you checked the light bulb?"
question, and answering "No" will show you the "How to replace a ligh
bulb" page instead.

Additionally, clicking 'continue' on the fusebox check page sends you to
the lightbulb check question, rather than sending you directly to the
custom "describe repair" page.

--- a/db/questions.yml
+++ b/db/questions.yml
@@ -385,10 +385,19 @@ light_check_trip_switches:
   question: Have you checked the trip switches in the fuse box?
   answers:
     - text: 'Yes'
-      page: replace_lightbulb
+      next: light_check_bulb
 
     - text: 'No'
       page: check_fusebox
+
+light_check_bulb:
+  question: Have you replaced the light bulb?
+  answers:
+    - text: 'Yes'
+      desc: inside_light_fitting
+
+    - text: 'No'
+      page: replace_lightbulb
 
 toilet_problem:
   question: Is your problem one of these?
