--- a/db/questions.yml
+++ b/db/questions.yml
@@ -15,8 +15,7 @@ communal_problem:
   question: What is the problem in the communal grounds?
   answers:
     - text: A light is not working
-      desc: communal_faulty_lamp_post
-      sor_code: 20110220
+      next: communal_light_problem
 
     - text: The main entrance door is damaged or not closing
       desc: communal_main_entrance_door
@@ -40,6 +39,17 @@ communal_problem:
 
     - text: Something else
       desc: communal_describe_repair
+
+communal_light_problem:
+  question: Where is the faulty light located?
+  answers:
+    - text: On a lamp post
+      desc: communal_faulty_street_light
+      sor_code: 405E1022
+
+    - text: Somewhere else
+      desc: communal_faulty_light
+      sor_code: 405E1017
 
 outside_problem:
   question: What is the problem outside your home?
