(chore) Outside 'describe repair' text shouldn't mirror question
Previously, if you answered "What is the problem outside your home?"
with "something else", the next page would show the same answers a
second time, only as bullet points on the free-text description page.

I've therefore amended the description page text to be similar to the
`_communal_describe_repair` one - albeit with a tweak to the request
for the location - as it'll be on the resident's property, rather than
elsewhere on the estate.

--- a/db/questions.yml
+++ b/db/questions.yml
@@ -54,11 +54,11 @@ communal_light_problem:
 outside_problem:
   question: What is the problem outside your home?
   answers:
-    - text: The guttering or downpipe is overflowing or damaged
+    - text: The guttering or downpipe is blocked or damaged
       desc: outside_guttering
       sor_code: 20060010
 
-    - text: A drain is blocked or overflowing
+    - text: A drain is blocked
       desc: outside_drain
       sor_code: 34D60301
 
