(fix) Flow through toilet not flushing / blocked
The "unblock your toilet" video page was incorrectly being shown to
users selecting "toilet not flushing". I've changed this to be shown
to users with "blocked toilet" instead.

From that page, if they click "Continue" they are shown a new question
"Is this your only toilet?".

Choosing "yes", shows the emergency contact page. Choosing "no", sets
the SOR code and asks them to provide further details in the normal way.

--- a/db/questions.yml
+++ b/db/questions.yml
@@ -413,11 +413,10 @@ toilet_problem:
   question: Is your problem one of these?
   answers:
     - text: Toilet is blocked
-      page: blocked_only_toilet
-      sor_code: 20060020
+      page: toilet_unblock_info
 
     - text: Toilet is not flushing
-      page: toilet_unblock_info
+      desc: toilet_problem
       sor_code: 20060020
 
     - text: Toilet is damaged
@@ -429,6 +428,16 @@ toilet_problem:
       sor_code: 20060020
 
     - text: Something else
+      desc: toilet_problem
+      sor_code: 20060020
+
+blocked_only_toilet:
+  question: Is this your only toilet?
+  answers:
+    - text: 'Yes'
+      page: emergency_contact
+
+    - text: 'No'
       desc: toilet_problem
       sor_code: 20060020
 
