--- a/db/questions.yml
+++ b/db/questions.yml
@@ -23,7 +23,7 @@ communal_problem:
     - text: The intercom is not working for my property
       desc: communal_intercom
 
-    - text: The lift is faulty
+    - text: The lift is faulty or damaged
       desc: communal_lift
 
     - text: The rubbish chute is blocked or damaged
@@ -58,7 +58,7 @@ outside_problem:
       desc: outside_guttering
       sor_code: 20060010
 
-    - text: A drain is blocked
+    - text: A drain is blocked or overflowing
       desc: outside_drain
       sor_code: 34D60301
 
