(chore) Add Rollbar
The only change to the default config is to disable rollbar in
development as well as test.

Regarding environment variables: I thought these were required for
rollbar even in development, but that doesn't seem to be the case so
I've put these in the 'optional' section of the docs.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,7 @@ Metrics/LineLength:
     Exclude:
       - 'spec/**/*'
       - 'config/initializers/simple_form.rb'
+      - 'config/initializers/rollbar.rb'
 
 Metrics/BlockLength:
     Exclude:
