(chore) Upgrade Rubocop
Two of these were actual fixes: attr_readers which shouldn't have
existed.

Regarding the YAML being rescued from here - it's hard to pin it down to
a specific error: could be TypeError (can't cast to string) or a YAML
parse error, or something we haven't thought of yet. At least with
StandardError we're explicit about what we're rescuing.

Regarding FormatStringToken: this incorrectly recognises I18n.l
localisation date formatting, so unfortunately we need to disable it
completely.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,9 @@ Style/TrailingCommaInArguments:
 Style/Documentation:
     Enabled: false
 
+Style/FormatStringToken:
+    Enabled: false
+
 Metrics/LineLength:
     Max: 80
     Exclude:
