(chore) remove communal/outside repairs
These can't be raised against properties (need to be against blocks or
estates instead), so we can't handle them yet. Instead bump the 'which
room?' question to be the first, and change the wording accordingly.

Hopefully reverting this commit will allow us to reinstate them, but I'm
not 100% sure it'll be that simple.

--- a/db/questions.yml
+++ b/db/questions.yml
@@ -1,85 +1,6 @@
 ---
-location:
-  question: Where is the problem located?
-  answers:
-    - text: In my home
-      next: which_room
-
-    - text: Outside my home
-      next: outside_problem
-
-    - text: In a communal area
-      next: communal_problem
-
-communal_problem:
-  question: What is the problem in the communal area?
-  answers:
-    - text: A light is not working
-      next: communal_light_problem
-
-    - text: The main entrance door is damaged or not closing
-      desc: communal_main_entrance_door
-
-    - text: The intercom is not working for my property
-      desc: communal_intercom
-
-    - text: The lift is faulty or damaged
-      desc: communal_lift
-
-    - text: The rubbish chute is blocked or damaged
-      desc: communal_rubbish_chute
-      sor_code: 2500990
-
-    - text: There is a blocked or overflowing drain
-      desc: communal_blocked_drain
-      sor_code: 34D60301
-
-    - text: There are pests or rodents
-      desc: communal_pests
-
-    - text: Something else
-      desc: communal_describe_repair
-
-communal_light_problem:
-  question: Where is the faulty light located?
-  answers:
-    - text: On a lamp post
-      desc: communal_faulty_street_light
-      sor_code: 405E1022
-
-    - text: Somewhere else
-      desc: communal_faulty_light
-      sor_code: 405E1017
-
-outside_problem:
-  question: What is the problem outside your home?
-  answers:
-    - text: The guttering or downpipe is blocked or damaged
-      desc: outside_guttering
-      sor_code: 20060010
-
-    - text: A drain is blocked or overflowing
-      desc: outside_drain
-      sor_code: 34D60301
-
-    - text: Paving is broken or coming loose
-      desc: outside_paving
-
-    - text: The roof is leaking
-      desc: outside_describe_repair
-      sor_code: 20030010
-
-    - text: A light is not working
-      desc: communal_faulty_light
-
-    - text: I have pests or rodents in or near my home
-      desc: communal_pests
-
-    - text: Something else
-      desc: outside_describe_repair
-
 which_room:
-  question: Which room?
+  question: In which room is the problem located?
   answers:
     - text: Kitchen
       next: kitchen_problem
