(fix) Boiler issues are an emergency
As it's the winter, heating issues need to be raised with the RCC. This
ensures they are dealt with within 24 working hours.

I've also merged the "Hot water" and "Heating" answers, as they both result
in the same page being shown, which has the options "I have no heating" and
"I have no hot water".

--- a/db/questions.yml
+++ b/db/questions.yml
@@ -24,10 +24,7 @@ kitchen_problem:
     - text: Electrical
       next: kitchen_electrical_problem
 
-    - text: Heating
-      next: heating_problem
-
-    - text: Hot water
+    - text: Heating / Hot water
       next: heating_problem
 
     - text: Sink
@@ -68,13 +65,8 @@ heating_problem:
     - text: I have no heating
       page: heating_repairs
 
-    - text: I have no hot water - boiler in my home
-      desc: inside_boiler
-      sor_code: 4896801H
-
-    - text: I have no hot water - communal boiler
-      desc: communal_boiler
-      sor_code: 48000000
+    - text: I have no hot water
+      page: emergency_contact
 
     - text: Radiator is not working
       sor_code: 4896816H
@@ -128,10 +120,7 @@ bathroom_problem:
     - text: Electrical
       next: bathroom_electrical_problem
 
-    - text: Heating
-      next: heating_problem
-
-    - text: Hot water
+    - text: Heating / Hot water
       next: heating_problem
 
     - text: Toilet
@@ -230,10 +219,7 @@ other_problem:
    - text: Gas
      page: emergency_contact
 
-   - text: Heating
-     next: heating_problem
-
-   - text: Hot water
+   - text: Heating / Hot water
      next: heating_problem
 
    - text: Internal door
